changed color of console
updated css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,7 +48,7 @@ section{
 }
 
 .section-6 {
-	background-color:#f3f5f7;
+	background-color:lightgrey;
 	box-shadow: 2.5px 2.5px 10px rgba(0, 0, 0, 0.5);
 	font-family:monospace;
 	color: white; 
